# l2label

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.ipynb
changelog/: index.html
docs/: index.md
docs/reference/: api.md
models/: model_ds15_us0_bd0.json
reference/api/: index.html
src/l2label/: __init__.py  compartments.py  models.py
src/l2label/models/: minnie65_ds15_us0_bd0.json  v1dd_ds15_us0_bd0.json
src/l2label/models/xgb/: minnie65_ds15_us0_bd0.ubj  v1dd_ds15_us0_bd0.ubj
